<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_workout">

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.View.UI.Fragments.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.example.View.UI.Fragments.workout.WorkoutFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.example.View.UI.Fragments.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" >
        <action
            android:id="@+id/action_navigation_music_to_navigation_music_list"
            app:destination="@id/navigation_music_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_music_list"
        android:name="com.example.View.UI.Fragments.music.list.MusicListFragment"
        tools:layout="@layout/fragment_music_list"
        >
        <action
            android:id="@+id/action_navigation_music_list_to_navigation_music"
            app:destination="@id/navigation_music" />
    </fragment>
</navigation>